# divvun-speech-rs

./: CLAUDE.md  Cargo.toml  Justfile  build.rs
examples/: benchmark_direct.rs  dynamic_probe.rs  engine_churn.rs  synthesize.rs  synthesize_streaming.rs  word_timings.rs
src/: engine.rs  lib.rs  main.rs  symbols.rs  text.rs
wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.hpp
wrapper/custom_ops/: op_istft.cpp  op_istft_pocketfft.cpp  op_layer_norm.cpp  register_ops.cpp
