[package]
name = "divvun-speech"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
# Native Rust ExecuTorch port (replaces the old C++ FFI wrapper). The `xnnpack`
# feature builds/links the native XNNPACK submodule so the delegated
# voice/vocoder models run. Published at divvun/executorch-rs; Cargo.lock pins
# the exact commit.
executorch = { git = "https://github.com/divvun/executorch-rs", features = ["xnnpack"] }
libc = "0.2"
thiserror = "2"
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
